--- a/style.css
+++ b/style.css
@@ -40,3 +40,31 @@ td:nth-child(2) {
 td:nth-child(4) {
  color: blue;
 }
+
+dl:hover {
+  background-color: purple;
+}
+dd:hover {
+  background-color: white;
+}
+
+.outer {
+  background-color: #FF69B4;
+  height: 20px;
+  margin-top: 20px;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  width: 75%;
+}
+
+.inner {
+  background-color: #09F;
+  margin-left: 12.5%;
+  margin-right: 12.5%; 
+}
+
+div > p {
+  margin-top: 0;
+  margin-left: 40%;
+  margin-right: 40%; 
+}
